# agent-0

./: .env.example  .gitignore  AGENTS.md  CHANGELOG.md  README.md  bsc.address  docker-compose.yml  mockusdc-verify.json  nixpacks.toml
.agents/: README.md  pyproject.toml
.agents/demo_buyer/: README.md
.agents/emagents/: __init__.py  bootstrap.py  repo_verifier_bridge.py  run_all.py
.agents/emagents/common/: config.py  supabase_client.py
.agents/emagents/demo_buyer/: __main__.py
.agents/emagents/irc_relay/: __main__.py
.agents/emagents/reputation/: __main__.py
.agents/emagents/settlement/: __main__.py
.agents/emagents/task_intake/: __init__.py
.agents/emagents/verifier_worker/: __init__.py  __main__.py
.agents/emagents/workflow_demo/: http_mirror.py  ui_rich.py
.agents/emagents/workflow_demo/static/: index.html
.agents/irc_bots/: verifier_bot.py
.agents/metadata/: reputation-agent.json  verifier-agent.json
.agents/robot_executor/: README.md
backend/: Procfile  README.md  nixpacks.toml  pyproject.toml
backend/em_api/: __init__.py  __main__.py  config.py  constants.py  deps.py  main.py
backend/em_api/middleware/: x402.py
backend/em_api/routes/: catalog.py  dashboard.py  disputes.py  evidence_files.py  executors.py  health.py  leaderboard.py  tasks.py  wallet_activity.py  world_id.py
backend/em_api/services/: agent_wallet_auth.py  chain.py  dgrid_gateway.py  dgrid_x402_payment.py  evidence_schemas.py  greenfield.py  settlement_ops.py  task_assistant_llm.py  task_draft_llm.py  verification.py  verification_ops.py  world_id_signal.py  x402_facilitator.py  x402_signer.py
backend/tests/: test_disputes_list.py  test_executors_list.py  test_health.py  test_task_assistant_focus.py  test_task_draft_validation.py  test_tasks_approve_evidence.py  test_tasks_dispute.py  test_tasks_resolve_dispute.py
execution-market-mcp/: README.md  pyproject.toml
execution-market-mcp/src/execution_market_mcp/: __main__.py
(+184 files in other folders)
