[project]
name = "agent-zero-agents"
version = "0.1.0"
description = "Agent Zero agents: verifier, settlement, reputation, IRC demos"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "certifi>=2024.8.30",
  "httpx>=0.27.0",
  "starlette>=0.37.0",
  "pydantic-settings>=2.6.0",
  "python-dotenv>=1.0.0",
  "supabase>=2.10.0",
  "web3>=7.6.0",
  "eth-account>=0.13.0",
  "pydle>=1.1.0",
]

[project.optional-dependencies]
realtime = [
  "websockets>=12.0",
]

[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]
include = ["emagents*"]
