[project]
name = "execution-market-mcp"
version = "0.1.0"
description = "Model Context Protocol (MCP) server for Agent Zero / Execution Market REST API"
readme = "README.md"
requires-python = ">=3.10"
dependencies = ["httpx>=0.27.0", "mcp[cli]>=1.2.0"]

[project.scripts]
execution-market-mcp = "execution_market_mcp.server:main"

[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]
